--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons": "0.0.11",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "element-plus": "^1.1.0-beta.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
